--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_heatmap_calendar: ^1.0.5
   google_nav_bar: ^5.0.6
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
