--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,3 +26,9 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/images/
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: lib/assets/fonts/Roboto-Light.ttf
+        - asset: lib/assets/fonts/Roboto-Regular.ttf
+        - asset: lib/assets/fonts/Roboto-Medium.ttf
